crates/amaru/tests/snapshots/rewards__dreps_175.snap
---
source: crates/amaru/src/ledger/rewards.rs
expression: dreps
---
{
  "keys": {
    "158f05b68cc6fdae1f28abe1e5b8c44e1662e2a6043266faac738605": "drep1y2cpz8kmr83z0vumpq5r8zxqpcjnhaqg8h4tt5u4wlhntssndylla",
    "1bf1e138f2f8beabc963c94cc28ee8ed4b41744601f2edaf50b21efd": "drep1yt5498apq2xmuvugmf0jdd5kp5zd3ccpezn6m2mzsvuh3pqn8x06l",
    "1ec80930158084eb5c735fd9bfb1ec53b8b5001c4b39d32c116b4921": "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w",
    "1fab5f9cba03290d7e25379c3df0a43450796895d5dacbb6b255e580": "drep1yfy9wajz7mrc6x5a4s23x5vttztqea6ajx9v83xcr6c5xlqxjx05p",
    "207c9ab177d332a654b9c0135df65d300aee237becc22ab8142f5cd3": "drep1ytg3f3uc0xda26q0q5fkg47dhlmdspm4hl3md8k6gcjk7zccfvsqc",
    "25b57d0e01bd657db7fddeb5528bddf88f1d9d445c992dffd3936f9e": "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w",
    "40b3c98d3b5f5a7748829d612e9e1ccd5f429970abc9abfeae867af9": "drep1ydmraa6kv8cvmry059v608tehl50nfmg0z764lmsqkvwurs40sw2z",
    "4d0abda0fa477aa2cdf365770e80f814aa62395b35a49f6fda21db99": "drep1y25j98kvqf7t3tj4pvxwrjr2728dsrfekptgg3kxqrr56qqcny8sn",
    "5ecd40556ba18330dd5a718e0262d2c7943639798fb6943c09823f06": "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w",
    "687352e5c62c977cee8978c024c06c5ab2ed280d2181e5ec0b59fb8d": "drep1y25j98kvqf7t3tj4pvxwrjr2728dsrfekptgg3kxqrr56qqcny8sn",
    "7c3ae2f2175c3d886b9daaa362533b7db1b30db6f2bafaed7569eeef": "drep1ydmraa6kv8cvmry059v608tehl50nfmg0z764lmsqkvwurs40sw2z",
    "86c769419aaa673c963da04e4b5bae448d490e2ceac902cb82e4da76": "drep1ydmraa6kv8cvmry059v608tehl50nfmg0z764lmsqkvwurs40sw2z",
    "951fcc7230ca42c67077aeb005e041bb428d32f023edbfc3ac77a742": "drep1yf6rudz7w9kz4etshj0njg7fjtd0c4frgsds6f8e6ep47ygl6sw74",
    "a2ca2495e5be135760f68299660873861e753100042d1c891826b279": "drep1ytsy6uatehlmxymymrwuycph0s6ewwn0jxsnyfq6vs47h4sflw0dg",
    "aeb4548104cc2f404a81f77408c00f5f7ca38aa71add0ac6f7f4048c": "drep1ygytfjy863rx34wqlhjs3kpk8sxzehl2dullf7h0kpdajdgrga7lc",
    "b75276e07c061a807a079b95c42ddd36bc86aa3cafbeee9d3d624287": "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w",
    "bfaa385c8eab7bbdc6c98b50413435b3d02b73de3c644e1384b801d4": "drep1ydmraa6kv8cvmry059v608tehl50nfmg0z764lmsqkvwurs40sw2z",
    "c9e345aa4048ef863333d5dfa3bcdb0f05b905f484049cf1947a7c86": "drep1y2j502uqsjl7ujrg5e73mxc2up2wu963r6eg44zdglzanncytjpxy",
    "ce5bfef8d88f9ef013c841fc9e93aae6164d330e317727198b7ca1cb": "drep1y2xuj82kwvjrnrgzsesh2yezg30neehkzwd9ed9kd20f2asze2l6z",
    "cf1ef74bee52e2a7b03b3e3af80cf17ba914123cc514e85c0c01201e": "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w",
    "d11b592fcc913605dbc42459d4ae8bb89c848e13926123bac85e2ab5": "drep1yftr2094dxeszxy944y9n5ms5eg3md28adlvk0vqwcn4pgc7kq6wr",
    "d3e3c4bf80f3ac8641af4a99214363bf4060deba1ed5c0d830b62c9e": "drep1y2fgxycu78q496nj2mzkf2qqedfhv8evw46jd6nus659z0g3n4n6r",
    "db4004c77d0d6371dc49aa87df4bcc90d5a02cc9f8096ba8b7430999": "drep1yfs2e9c42nq5fv2ac9ygxrhxllgaz9ms2g0xynaj7dpd58qwg2030",
    "db5e8ece0982acc4883de67c2e3411cc26bd56686a162074998c02bc": "drep1ygytfjy863rx34wqlhjs3kpk8sxzehl2dullf7h0kpdajdgrga7lc",
    "e6cd48c60e2c7b844255c4b778c9952b7f04d0c8d22f0dd6652ac14e": "drep1y2qn0rf74zdk3u8upx2yk8un7tlts5f33uvklx96gq5a32qmwj3xg",
    "edc52808d58a420ce2df3da8c7118c858c7aa136fa7b2b1baa3e81ed": "drep1ytax4rwzvdwamnu67j2uk9z00660lpzcvmlys6266l9kt5c262k7m",
    "f1a8e379127b811583070faf74db00d880d45027fe6171b1b69bd9ca": "drep1y28wyfxwyywajenkfcy0s9r3fqkvufm4stpxy80j4234qzsl80wwe",
    "fa4ca121f0b5a6537d807f3b325cb88db3a3f78de0e23c2d9d7f7102": "drep1yge5qzj9ggvk77rz0vcmq2rpzcgq563e6fmydjngelxtnmgz2g54e",
    "fd0e26443fd3dc2ec11cddfa1bdb94dfc476404154f9eb8caa3dfd1f": "drep1ydmraa6kv8cvmry059v608tehl50nfmg0z764lmsqkvwurs40sw2z",
    "fd1c740673b5b8840a12cfbbd4e6c5c243bf08bbece4c8b3258194b2": "drep1yf6rudz7w9kz4etshj0njg7fjtd0c4frgsds6f8e6ep47ygl6sw74",
    "ff2c8a08dbfcf8877c0471ee02dca414e64ef20b20b62dffda74fdeb": "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w"
  },
  "scripts": {}
}