crates/amaru/tests/snapshots/rewards__dreps_176.snap
---
source: crates/amaru/src/ledger/rewards.rs
expression: dreps
---
{
  "dreps": {
    "drep1y09hnm54lxqfhjp7arnzef68ucwsd7t3nq4yvvej94t8f8qg0tqdt": {
      "mandate": 190,
      "metadata": {
        "url": "https://meshjs.dev/governance/meshjs.jsonld",
        "content_hash": "237157ffba4e8db9aa3fbdac2d440483066d725326c819d3ba8e1ae5fffb4c00"
      }
    },
    "drep1y0gy6wwyuj6za8kamwm5rwmxxe5rk6pz4ckx3hmsfdjuujsr70shz": {
      "mandate": 195,
      "metadata": {
        "url": "https://2pzt5hfjckkkpzfl.public.blob.vercel-storage.com/drep/testHTJ-o4isH7ztLEim1QMDNkK2WSuDBd97P9.jsonld",
        "content_hash": "0e823e004257161185b2ea269fa14ddd33aadb80957fa883af545b388dc7c834"
      }
    },
    "drep1y25j98kvqf7t3tj4pvxwrjr2728dsrfekptgg3kxqrr56qqcny8sn": {
      "mandate": 193,
      "metadata": {
        "url": "https://adawallet.io/public_files/MDRep.jsonld",
        "content_hash": "d604fa7dcd2c0efef5524f059bc43c3911eddb6bfca1b048b3985ac5aea19726"
      }
    },
    "drep1y28wyfxwyywajenkfcy0s9r3fqkvufm4stpxy80j4234qzsl80wwe": {
      "mandate": 193,
      "metadata": {
        "url": "https://preprod.handle.me/papagoose",
        "content_hash": "c3c98684edb7f2a0ca72f33db0755677f6de71484d6c41300ae874e19d60a6cc"
      }
    },
    "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w": {
      "mandate": 190,
      "metadata": null
    },
    "drep1y2aas36r3epqrz0gehkkkjm9yerwngm53lfsp83szymdtdq2whufp": {
      "mandate": 195,
      "metadata": null
    },
    "drep1y2chj5wktflvn8gq35au3z93npsg3vnvg3ujvvdahv5u30g4azqte": {
      "mandate": 195,
      "metadata": {
        "url": "https://metadata.cardanoapi.io/data/3cfe537ae5f9c053b4fa3aa101b306b1bf51fe720fe4ab8e425b73de0aa9dc8a",
        "content_hash": "3cfe537ae5f9c053b4fa3aa101b306b1bf51fe720fe4ab8e425b73de0aa9dc8a"
      }
    },
    "drep1y2cpz8kmr83z0vumpq5r8zxqpcjnhaqg8h4tt5u4wlhntssndylla": {
      "mandate": 195,
      "metadata": {
        "url": "https://metadata.cardanoapi.io/data/test",
        "content_hash": "9a553483f48f246a31a68cd6d23607a4607197421d0e123c8f4bc0dccc4c4f70"
      }
    },
    "drep1y2fgxycu78q496nj2mzkf2qqedfhv8evw46jd6nus659z0g3n4n6r": {
      "mandate": 189,
      "metadata": null
    },
    "drep1y2j502uqsjl7ujrg5e73mxc2up2wu963r6eg44zdglzanncytjpxy": {
      "mandate": 188,
      "metadata": null
    },
    "drep1y2qn0rf74zdk3u8upx2yk8un7tlts5f33uvklx96gq5a32qmwj3xg": {
      "mandate": 197,
      "metadata": null
    },
    "drep1y2xuj82kwvjrnrgzsesh2yezg30neehkzwd9ed9kd20f2asze2l6z": {
      "mandate": 190,
      "metadata": null
    },
    "drep1ydmraa6kv8cvmry059v608tehl50nfmg0z764lmsqkvwurs40sw2z": {
      "mandate": 189,
      "metadata": {
        "url": "https://www.logicalmechanism.io/drepTestnet",
        "content_hash": "55c4ea20e133878ef8c80ddbf3f73adbe3220963a2874f8757d435d60126db41"
      }
    },
    "drep1yf69rxk9xkwqqwn6ee5ugadw2k5xaw8elmrv7ml24ksaa0cx3653k": {
      "mandate": 196,
      "metadata": {
        "url": "https://raw.githubusercontent.com/m-i-k-e/meta_test/refs/heads/main/asdfasdf%20(1).jsonld",
        "content_hash": "2a6efdba965ff4d333d84fee3491edbbe6b8348edc6f07e307a6a1afec101b46"
      }
    },
    "drep1yf6rudz7w9kz4etshj0njg7fjtd0c4frgsds6f8e6ep47ygl6sw74": {
      "mandate": 188,
      "metadata": {
        "url": "https://raw.githubusercontent.com/NanaSafo01/drep-metadata/main/WadaDrep.jsonld",
        "content_hash": "8a1971eaccf490599fc7e02c522f0c2012f8d9f0e3f6bcf938b7134b58c617c0"
      }
    },
    "drep1yfrud5mk40ttv4z5l4ltvcgfstmjzwyv73hczmmpue4dv0gus8kge": {
      "mandate": 199,
      "metadata": {
        "url": "https://metadata.cardanoapi.io/data/test",
        "content_hash": "9a553483f48f246a31a68cd6d23607a4607197421d0e123c8f4bc0dccc4c4f70"
      }
    },
    "drep1yfs2e9c42nq5fv2ac9ygxrhxllgaz9ms2g0xynaj7dpd58qwg2030": {
      "mandate": 192,
      "metadata": {
        "url": "https://raw.githubusercontent.com/Dangtq84/HA_NHIEN_dReps/main/HA_NHIEN.jsonld",
        "content_hash": "88dbae72d6eb70ef4a8a2b661b990ee4fc89e8abde0686c6878daf90a0a2edcb"
      }
    },
    "drep1yftr2094dxeszxy944y9n5ms5eg3md28adlvk0vqwcn4pgc7kq6wr": {
      "mandate": 188,
      "metadata": {
        "url": "https://raw.githubusercontent.com/UPTODATE-DEV/dRep/drep_test/Cardano%20Africa%20C.jsonld",
        "content_hash": "59830510a828097b58b8bf1bf23970c1e34a420cc5cb3fe4dce80aa1d8993f11"
      }
    },
    "drep1yfy9wajz7mrc6x5a4s23x5vttztqea6ajx9v83xcr6c5xlqxjx05p": {
      "mandate": 188,
      "metadata": null
    },
    "drep1yg3mcc7w6njqkgkafes9rsjchgud2euas83n7d87tewdkngpgk07n": {
      "mandate": 188,
      "metadata": null
    },
    "drep1yg72tju5h0wjky7w3etzc5esjss2zlajnq4v6jw3v0h73agp97k0g": {
      "mandate": 198,
      "metadata": {
        "url": "https://raw.githubusercontent.com/Sadeghg/drep-repo/refs/heads/main/GovCircleCommitt.jsonld",
        "content_hash": "be2c1c4c312e2ff2e551bef8b2424645e3147ce278b1bfdf5476f048e9f2b2d9"
      }
    },
    "drep1yge5qzj9ggvk77rz0vcmq2rpzcgq563e6fmydjngelxtnmgz2g54e": {
      "mandate": 192,
      "metadata": {
        "url": "https://raw.githubusercontent.com/Dangtq84/HA_NHIEN_1/refs/heads/main/HA_NHIEN_1.jsonld",
        "content_hash": "c470d07d3eb20cc757cb3c0d136d49a108287b23fa9edb35f98c8554979f54ac"
      }
    },
    "drep1ygytfjy863rx34wqlhjs3kpk8sxzehl2dullf7h0kpdajdgrga7lc": {
      "mandate": 188,
      "metadata": {
        "url": "https://raw.githubusercontent.com/UPTODATE-DEV/dRep/main/Cardano%20Africa%20C.jsonld",
        "content_hash": "d63edeb7d4b2398103dfc3db3ab409feebd88a1373402b59f8b38a2048b92fb1"
      }
    },
    "drep1yt4tspehdvggcd4e5cwsqlwulvyyrjj9jquuqu5wlyju9ns5wfc0z": {
      "mandate": 189,
      "metadata": null
    },
    "drep1yt5498apq2xmuvugmf0jdd5kp5zd3ccpezn6m2mzsvuh3pqn8x06l": {
      "mandate": 189,
      "metadata": null
    },
    "drep1ytax4rwzvdwamnu67j2uk9z00660lpzcvmlys6266l9kt5c262k7m": {
      "mandate": 188,
      "metadata": null
    },
    "drep1ytett72fzlmudmq55sn95lm5qcks3ekmwpzq5czfswtustqkxs77v": {
      "mandate": 196,
      "metadata": {
        "url": "https://metadata.cardanoapi.io/data/IAmATestDRepMan",
        "content_hash": "26804e1e72aa765c990cb2d4f0aca008cd9f3cf37d3810f33174ce200bc148a7"
      }
    },
    "drep1ytg3f3uc0xda26q0q5fkg47dhlmdspm4hl3md8k6gcjk7zccfvsqc": {
      "mandate": 192,
      "metadata": null
    },
    "drep1ytk3r5ddfk2cq66ygdtkwf9yck6hhy7uzhk2tgl5d53448skyutw7": {
      "mandate": 195,
      "metadata": {
        "url": "https://2pzt5hfjckkkpzfl.public.blob.vercel-storage.com/drep/MeshInc-z5TmFSeSbfYqfExWNIJR2TuQ0ThlxK.jsonld",
        "content_hash": "7d157a834ed554bee0d0712d7733a366e6ac022598439b50a928e5a3cb61a8ed"
      }
    },
    "drep1ytsy6uatehlmxymymrwuycph0s6ewwn0jxsnyfq6vs47h4sflw0dg": {
      "mandate": 189,
      "metadata": null
    },
    "drep1yvj9cn7cwc3wyrt3lclk2ua92lxd8uxqzju0qza8ky380uqjpzm8s": {
      "mandate": 188,
      "metadata": null
    },
    "drep1yvmeer7fcwng5ea3v7cw2g2uq352sm58xtmaphp5vqvcxycrzszhz": {
      "mandate": 189,
      "metadata": {
        "url": "https://www.logicalmechanism.io/drepTestnet",
        "content_hash": "55c4ea20e133878ef8c80ddbf3f73adbe3220963a2874f8757d435d60126db41"
      }
    }
  }
}